fix a bug where text of message will not get immediately hidden but will stay visibleor short duratoin before disappearing

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -65,6 +65,7 @@ svg {
     height: 25px;
     font-weight: bold;
     font-size: 20px;
+    opacity: 0;
     transition: opacity .5s ease-in;
 }
 
